<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ele434_team15_2026</name>
  <version>0.0.0</version>
  
  <description>TODO: Package description</description>
  
  <maintainer email="tkenning1@sheffield.ac.uk">Thomas Kenning</maintainer>
  <maintainer email="ejohnston3@sheffield.ac.uk">Emily Johnston</maintainer>
  <maintainer email="ecooper8@sheffield.ac.uk">Ewan Cooper</maintainer>
  <maintainer email="lbirks1@sheffield.ac.uk">Louis Birks</maintainer>

  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>math</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
